--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 						<div id="logo">
 							<span class="image avatar48"><img src="images/avatar_2.jpg" alt="avatar" style="border: 1px solid #2d55e7"/></span> <!-- 2 Options: avatar_1(graduation pic) OR avatar_2(business pic) -->
 							<h1 id="title" style="color: #2d55e7;">Kien Vinh Chung</h1>
-							<p>Business Intelligence <br>Data Analyst</p>
+							<p>BI Data Analyst</p>
 							<p>
 								<span class="fa-solid fa-circle-check fa-bounce" style="color: #2d55e7; animation-duration: 1s;"></span> 
 								<a href="#microsoft_certifications" class="scrolly">Microsoft&reg; Power BI Certified</a>
@@ -121,7 +121,6 @@
 						<div class="container">
 							<header>
 								<h2>Portfolio</h2>
-								Click the projects' image for full details
 							</header>
 
 							<br>
@@ -378,7 +377,7 @@
 									</article>
 								</div>
 							</div>
-							<p>Click the degree certificate for enlarged image in new browser tab</p>
+							
 							<!-- margin: top right bottom left; -->
 							<div style="text-align: center; margin-top: 0px;">
 								<div class="col-4 col-12-mobile" style="display: inline-block; vertical-align: top; width: 39%; margin: 0px 15px 10px 15px;">
@@ -442,11 +441,7 @@
 								<h4><a href="https://learn.microsoft.com/en-us/users/kienchung-3610/transcript/vjjz0f422poem6q" target="_blank">View official transcript here</a></h4>
 								<h4>MCID: 994846777</h4>
 							</header>
-							<p>
-								Click the title for certification's detail
-								<br>
-								Click the certification for enlarged image in new browser tab
-							</p>
+
 							<div style="text-align: center; margin-top: 0px;">
 
 								<!-- PL-300 -->
@@ -455,7 +450,8 @@
 										<div>
 											<header style="background-color: rgb(3,100,182);">
 												<h3 style="color: white;">
-													<a href="https://learn.microsoft.com/en-us/certifications/power-bi-data-analyst-associate/" target="_blank">Microsoft Power BI Data Analyst Associate <br>(PL-300)</a>
+													Microsoft Power BI Data Analyst Associate 
+													<br><a href="https://learn.microsoft.com/en-us/certifications/power-bi-data-analyst-associate/" target="_blank" style="color: gray;">See details</a>
 												</h3>
 											</header>
 										</div>
@@ -476,7 +472,8 @@
 										<div>
 											<header style="background-color: rgb(3,100,182);">
 												<h3 style="color: white;">
-													<a href="https://learn.microsoft.com/en-us/certifications/azure-data-fundamentals/" target="_blank">Microsoft Azure Data Fundamentals <br>(DP-900)</a>
+													Microsoft Azure Data Fundamentals
+													<br><a href="https://learn.microsoft.com/en-us/certifications/azure-data-fundamentals/" target="_blank" style="color: gray;">See details</a>
 												</h3>
 											</header>
 										</div>
@@ -654,14 +651,11 @@
 							<h2>Resumé</h2>
 						</header>
 						<p>
-							Click the resumé for enlarged image in new browser tab<br>
-							OR <br>
-							<a href="https://drive.google.com/file/d/1mrI1MtPGfocDhKRgVRIp5uFo6KqLPe3N/view?usp=sharing" target="_blank">Click here to view printable PDF via Google Drive</a>
+							<a href="https://drive.google.com/file/d/1otVmcaCP_iBX70465mwG3tQ91qe4C_Z9/view?usp=sharing" target="_blank">PDF/Google Drive Link</a>
 						</p>
 						<div style="text-align: center;">
 							<div style="display: inline-block; vertical-align: top; width: 69%; box-shadow: 0 0 0.5em 0.15em #aaaaaa;">
-								<a href="images/resume/KienChungCV.png" target="_blank" class="image fit"><img src="images/resume/KienChungCV.png" alt="KienChungCV"/></a>
-								<!-- href="images/resume/KienVinhChung_GoogleCertified_DataAnalyst.pdf" -->
+								<a href="images/resume/KienChungCV_DataAnalyst.png" target="_blank" class="image fit"><img src="images/resume/KienChungCV_DataAnalyst.png" alt="KienChungCV_DataAnalyst"/></a>
 							</div>
 								<!--
 							<div class="col-4 col-12-mobile" style="; width: 39%;">
@@ -683,8 +677,6 @@
 							<header>
 								<h2>Contacts</h2>
 							</header>
-
-							<p>Click the links below to connect with me!</p>
 
 							<div class="bottom">
 								<!-- deleted class bottom and added class contact_info-->
