--- a/project_f.html
+++ b/project_f.html
@@ -36,11 +36,15 @@
 			<div id="header">
 				<div class="top">
 					<!-- Logo -->
-						<div id="logo">
-							<span class="image avatar48"><img src="images/avatar_2.jpg" alt="avatar" style="border: 1px solid #2d55e7"/></span> <!-- 2 Options: avatar_1(graduation pic) OR avatar_2(business pic) -->
-							<h1 id="title" style="color: #2d55e7;">Kien Vinh Chung</h1>
-							<p>Business Intelligence <br>Data Analyst</p>
-						</div>
+					<div id="logo">
+						<span class="image avatar48"><img src="images/avatar_2.jpg" alt="avatar" style="border: 1px solid #2d55e7"/></span> <!-- 2 Options: avatar_1(graduation pic) OR avatar_2(business pic) -->
+						<h1 id="title" style="color: #2d55e7;">Kien Vinh Chung</h1>
+						<p>BI Data Analyst</p>
+						<p>
+							<span class="fa-solid fa-circle-check fa-bounce" style="color: #2d55e7; animation-duration: 1s;"></span> 
+							<a href="#microsoft_certifications" class="scrolly">Microsoft&reg; Power BI Certified</a>
+						</p>
+					</div>
 					<!-- Nav -->
 						<nav id="nav">
 							<ul>
