--- a/project_zero.html
+++ b/project_zero.html
@@ -37,11 +37,15 @@
 			<div id="header">
 				<div class="top">
 					<!-- Logo -->
-						<div id="logo">
-							<span class="image avatar48"><img src="images/avatar_2.jpg" alt="avatar" style="border: 1px solid #2d55e7"/></span> <!-- 2 Options: avatar_1(graduation pic) OR avatar_2(business pic) -->
-							<h1 id="title" style="color: #2d55e7;">Kien Vinh Chung</h1>
-							<p>Business Intelligence <br>Data Analyst</p>
-						</div>
+					<div id="logo">
+						<span class="image avatar48"><img src="images/avatar_2.jpg" alt="avatar" style="border: 1px solid #2d55e7"/></span> <!-- 2 Options: avatar_1(graduation pic) OR avatar_2(business pic) -->
+						<h1 id="title" style="color: #2d55e7;">Kien Vinh Chung</h1>
+						<p>BI Data Analyst</p>
+						<p>
+							<span class="fa-solid fa-circle-check fa-bounce" style="color: #2d55e7; animation-duration: 1s;"></span> 
+							<a href="#microsoft_certifications" class="scrolly">Microsoft&reg; Power BI Certified</a>
+						</p>
+					</div>
 					<!-- Nav -->
 						<nav id="nav">
 							<ul>
@@ -52,7 +56,6 @@
 								<li><a href="#marketshare" id="marketshare-link"><span class="icon solid fa-calculator">Market Share</span></a></li>
 								<li><a href="#salesanimation" id="salesanimation-link"><span class="icon solid fa-magnifying-glass-location">Sales Animation</span></a></li>
 								<li><a href="#datamodeling" id="datamodeling-link"><span class="icon solid fa-file-code">Data Modeling</span></a></li>
-								<li><a href="#add" id="files-link"><span class="icon solid fa-file-excel">...</span></a></li>
 							</ul>
 						</nav>
 				</div>
@@ -140,7 +143,7 @@
 
 						<header>
 							<h2>Reports</h2>
-							<p>(Slideshow)</p>
+							<p>Slideshow</p>
 						</header>
 
 						<!-- Container for the image gallery -->
@@ -227,7 +230,7 @@
                     <div class="container">
                         <header>
 							<h2>Sales Revenue 2014-2021</h2>
-							<p>(Video-Autoplay-Loop)</p>
+							<p>Video-Autoplay-Loop</p>
 						</header>
 						<video style="border: 5px solid black; width: 100%;" width="100%" controls autoplay loop>
 							<source src="images/project_0_van_arsdel/power_bi/sales_revenue.mov" type="video/mp4">
