--- a/index.html
+++ b/index.html
@@ -708,11 +708,11 @@
 							<h2>Resumé</h2>
 						</header>
 						<p>
-							<a href="https://drive.google.com/file/d/1otVmcaCP_iBX70465mwG3tQ91qe4C_Z9/view?usp=sharing" target="_blank">PDF/Google Drive Link</a>
+							<a href="https://drive.google.com/file/d/1wZP70FKmdNMJ0cGgnsppWUWC5YKz2Bbh/view?usp=sharing" target="_blank">PDF/Google Drive Link</a>
 						</p>
 						<div style="text-align: center;">
 							<div style="display: inline-block; vertical-align: top; width: 69%; box-shadow: 0 0 0.5em 0.15em #aaaaaa;">
-								<a href="images/resume/KienChungCV_DataAnalyst.png" target="_blank" class="image fit"><img src="images/resume/KienChungCV_DataAnalyst.png" alt="KienChungCV_DataAnalyst"/></a>
+								<a href="images/resume/KienChung_CV.png" target="_blank" class="image fit"><img src="images/resume/KienChung_CV.png" alt="KienChung_CV"/></a>
 							</div>
 								<!--
 							<div class="col-4 col-12-mobile" style="; width: 39%;">
