--- a/index.html
+++ b/index.html
@@ -705,14 +705,14 @@
 					<br>
 					<div class="container">
 						<header>
-							<h2>Resumé</h2>
+							<h2>My Resume</h2>
 						</header>
 						<p>
-							<a href="https://drive.google.com/file/d/1wZP70FKmdNMJ0cGgnsppWUWC5YKz2Bbh/view?usp=sharing" target="_blank">PDF/Google Drive Link</a>
+							<a href="https://drive.google.com/file/d/1EQaMOw_5geuHHZl3Ht00WHU5USx8cfFh/view?usp=drive_link" target="_blank">PDF/Google Drive Link</a>
 						</p>
 						<div style="text-align: center;">
 							<div style="display: inline-block; vertical-align: top; width: 69%; box-shadow: 0 0 0.5em 0.15em #aaaaaa;">
-								<a href="images/resume/KienChung_CV.png" target="_blank" class="image fit"><img src="images/resume/KienChung_CV.png" alt="KienChung_CV"/></a>
+								<a href="images/resume/Data-Science-Kien-Chung-Resume.png" target="_blank" class="image fit"><img src="images/resume/Data-Science-Kien-Chung-Resume.png" alt="Data-Science-Kien-Chung-Resume"/></a>
 							</div>
 								<!--
 							<div class="col-4 col-12-mobile" style="; width: 39%;">
