--- a/index.html
+++ b/index.html
@@ -92,6 +92,9 @@
 					<section id="top" class="one dark cover">
 						<div class="container" style="height: 25em;">
 							<header>
+								<h1 class="alt"><strong style="color: red;">This site will be deprecated soon. <br>Please visit our new version (coming soon Fall 2024) <br><br><a target="_blank" href="https://kchung.app" style="color: red; font-size: 38px; font-weight: bold;">https://kchung.app</a><br><br> If the site can’t be reached, then it is not ready :D</strong>
+								<br>
+								<br>
 								<h2 class="alt">Hi! My name is <strong>Kien Chung</strong>.</h2>
 								<!-- <p>I'm a <strong>data analyst</strong> who enjoys analyzing dataset and collecting data pieces</p> -->
 								<!-- <p>I turn boring data into business insights to support data-driven decisions.</p> -->
@@ -99,7 +102,6 @@
 								<br>
 								<!-- <p>Think of <br>data <strong>(crude oil)</strong> and we the analyst turn them into information <strong>(gasoline and jet fuels)</strong><br>to help business' decision making and contribute to the future planning <strong>(the next thousand miles)</strong></p> -->
 							</header>
-							<br>
 							<footer>
 								<a href="#portfolio" class="button scrolly">Explore my Portfolio</a>
 							</footer>
